revised tokens diagram in RNN lecture

--- a/lectures/lectureSourceCodeAndFigures/DSTM-28RNN.tex
+++ b/lectures/lectureSourceCodeAndFigures/DSTM-28RNN.tex
@@ -219,7 +219,7 @@
 \end{itemize}
 \end{column}
 \begin{column}{0.5\textwidth}
-\includegraphics[width=1\textwidth]{lectRNN/tokens.pdf}
+\includegraphics[width=1\textwidth]{lectRNN/tokensV2.pdf}
 \end{column}
 \end{columns}
 \end{frame}
